# chatgpt-metaprompt

./: .gitignore  README.md  app.py  metaprompt-long.txt  metaprompt-short.txt  pyproject.toml
