[project]
name = "prompt-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm>=0.16",
    "openai>=1.51.2",
    "openllm>=0.6.13",
    "pyyaml>=6.0.2",
    "streamlit>=1.39.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
]
